# batch_size_studies

./: .gitignore  README.md  pyproject.toml  pytest.ini
notebooks/: GammaEta.ipynb
scripts/: analyze_small_muP_results.py  generate_reports.py  process_mnist1m.py  run_experimental_sweep.py  run_experiments.py  run_experiments_sequential.py  run_small_muP_experiments.py
scripts/experiments/mnist1m_classification/: _D=784_L=2_N=128_gamma=1p0_loss_type=MSE_optimizer=SGD_parameterization=muP_weights.pkl
src/batch_size_studies/: checkpoint_utils.py  configs.py  data_loading.py  data_utils.py  definitions.py  experimental_mnist_training.py  experiments.py  hessian.py  mnist_training.py  models.py  paths.py  plotting_utils.py  runner.py  storage_utils.py  synthetic_training.py  trainer.py  training_utils.py
tests/: conftest.py  test_checkpoint_utils.py  test_data_utils.py  test_definitions.py  test_experiments.py  test_hessian.py  test_mnist_training.py  test_models.py  test_reproducibility.py  test_runner.py  test_storage_utils.py  test_synthetic_training.py  test_trainer.py
tests/golden_data/: mnist_golden.pkl  synthetic_golden.pkl
tests/integration/: test_reproducibility.py  test_runner_integration.py  test_trainer_integration.py
